# neural_network_cpp

./: ActivationFunction.cpp  CMakeLists.txt  ForwardPropagation.cpp  Main.cpp  MaxElement.cpp  MinElement.cpp  NNDrawer.cpp  TextDrawer.cpp  main.cpp
Headers/: ActivationFunction.hpp  GlobalConstants.h  GlobalConstants.hpp  MaxElement.hpp  MinElement.hpp  NNDrawer.h  NNDrawer.hpp  TextDrawer.hpp
